--- a/labmatriz.conf
+++ b/labmatriz.conf
@@ -1,9 +1,9 @@
 #Laboratório de Gerência de Redes 2012-1
-#teste
 
 LANcliente[type]=generic
-LANservidor0[type]=generic
+LANservidorNTP[type]=generic
 firewall[type]=gateway
+firewall[nat]=eth0
 DMZservidor0[type]=generic
 DMZservidor1[type]=generic
 sw0[type]=switch
@@ -17,19 +17,24 @@ sw1[eth0]=port10
 sw1[eth1]=port11
 sw1[eth2]=port12
 
-firewall[nat]=eth0
+
 firewall[default_gateway]=10.0.0.2
+LANcliente[default_gateway]=192.168.100.1
+LANservidorNTP[default_gateway]=192.168.100.1
+DMZservidor0[default_gateway]=192.168.102.1
+DMZservidor1[default_gateway]=192.168.102.1
 
-LANcliente[eth0]=pt2:ip=192.168.0.101/24
 
-LANservidor0[eth0]=pt1:ip=192.168.0.2/24
+LANcliente[eth0]=pt2:ip=192.168.100.101/24
 
-firewall[eth2]=pt0:ip=192.168.0.1/24
-firewall[eth1]=port10:ip=192.168.2.1/24
+LANservidorNTP[eth0]=pt1:ip=192.168.100.2/24
+
+firewall[eth2]=pt0:ip=192.168.100.1/24
+firewall[eth1]=port10:ip=192.168.102.1/24
 firewall[eth0]=uplink:ip=10.0.0.1/30
 
-DMZservidor0[eth0]=port11:ip=192.168.2.2/24
+DMZservidor0[eth0]=port11:ip=192.168.102.2/24
 
-DMZservidor1[eth0]=port12:ip=192.168.2.3/24
+DMZservidor1[eth0]=port12:ip=192.168.102.3/24
 
 
