Adicionando o lab.conf

--- a/labmatriz.conf
+++ b/labmatriz.conf
@@ -2,8 +2,8 @@
 
 LANcliente[type]=generic
 LANservidorNTP[type]=generic
-firewall[type]=gateway
-firewall[nat]=eth0
+firewall0[type]=gateway
+firewall0[nat]=eth0
 DMZservidor0[type]=generic
 DMZservidor1[type]=generic
 sw0[type]=switch
@@ -18,20 +18,20 @@ sw1[eth1]=port11
 sw1[eth2]=port12
 
 
-firewall[default_gateway]=10.0.0.2
-LANcliente[default_gateway]=192.168.100.1
-LANservidorNTP[default_gateway]=192.168.100.1
+firewall0[default_gateway]=10.0.0.2
+LANcliente[default_gateway]=192.168.0.254
+LANservidorNTP[default_gateway]=192.168.0.254
 DMZservidor0[default_gateway]=192.168.102.1
 DMZservidor1[default_gateway]=192.168.102.1
 
 
-LANcliente[eth0]=pt2:ip=192.168.100.101/24
+LANcliente[eth0]=pt2:ip=192.168.0.100/24
 
-LANservidorNTP[eth0]=pt1:ip=192.168.100.2/24
+LANservidorNTP[eth0]=pt1:ip=192.168.0.1/24
 
-firewall[eth2]=pt0:ip=192.168.100.1/24
-firewall[eth1]=port10:ip=192.168.102.1/24
-firewall[eth0]=uplink:ip=10.0.0.1/30
+firewall0[eth2]=pt0:ip=192.168.0.254/24
+firewall0[eth1]=port10:ip=192.168.102.1/24
+firewall0[eth0]=uplink:ip=10.0.0.1/30
 
 DMZservidor0[eth0]=port11:ip=192.168.102.2/24
 
